--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: python
-install: "pip install -r requirements.txt"
-script: nosetests
+python:
+  - 2.7
+  - 3.5
+install:
+    - "pip install -r requirements.txt"
+    - pip install coveralls    
+script:
+    - coverage run --source=yourpackagename setup.py test
+after_success:
+    coveralls
