--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ install:
     - "pip install -r requirements.txt"
     - pip install coveralls    
 script:
-    - coverage run --source=yourpackagename setup.py test
+    - coverage run --source=team-sync test
 after_success:
     coveralls
